<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.lovrekovic.basketmanager.auth.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.view.LoginFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/background_gradient"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/Fragment_Login_GuidHor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.2"
            android:orientation="horizontal" />

        <EditText
            android:id="@+id/Fragment_Login_Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/input_text_rectangle"
            android:fontFamily="@font/andada"
            android:hint="@string/username"
            android:textColor="@color/text_gray"
            android:textColorHint="@color/text_gray"
            android:padding="10dp"
            android:text="@={viewModel.email}"
            android:inputType="textPersonName"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Login_GuidHor" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@id/Fragment_Login_Username"
            app:layout_constraintEnd_toEndOf="@id/Fragment_Login_Username"
            app:layout_constraintBottom_toBottomOf="@id/Fragment_Login_Username" />

        <EditText
            android:id="@+id/Fragment_Login_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/input_text_rectangle"
            android:fontFamily="@font/andada"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:text="@={viewModel.password}"
            android:singleLine="true"
            android:textColor="@color/text_gray"
            android:textColorHint="@color/text_gray"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Login_Username" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="@id/Fragment_Login_Password"
            app:layout_constraintEnd_toEndOf="@id/Fragment_Login_Password"
            app:layout_constraintBottom_toBottomOf="@id/Fragment_Login_Password" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Login_Password">
            <Button
                android:id="@+id/Fragment_Login_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:onClick="@{() -> viewModel.login()}"
                android:layout_weight="1"
                android:fontFamily="@font/andada"
                android:textSize="14sp"
                android:layout_margin="5dp"/>
            <Button
                android:id="@+id/Fragment_Login_Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_text_rectangle"
                android:text="@string/register"
                android:textAllCaps="false"
                android:fontFamily="@font/andada"
                android:layout_weight="1"
                android:textSize="14sp"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>