<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.profile.view.ProfileFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/background_gradient" />

        <ImageView
            android:id="@+id/Fragment_Profile_Image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Fragment_Profile_UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/andada"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Profile_Image" />

        <Button
            android:id="@+id/Fragment_Profile_ChangeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/green_button"
            android:fontFamily="@font/andada"
            android:text="@string/change_picture"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Profile_UserName" />

        <ImageButton
            android:id="@+id/Fragment_Profile_PlayedMatches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/transparent"
            android:src="@drawable/join_game_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Profile_ChangeImage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andada"
            android:text="@string/played_matches"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/Fragment_Profile_PlayedMatches"
            app:layout_constraintEnd_toEndOf="@id/Fragment_Profile_PlayedMatches"
            app:layout_constraintStart_toStartOf="@id/Fragment_Profile_PlayedMatches"
            app:layout_constraintTop_toTopOf="@id/Fragment_Profile_PlayedMatches" />


        <ImageButton
            android:id="@+id/Fragment_Profile_UpcomingMatches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/transparent"
            android:src="@drawable/join_game_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Profile_PlayedMatches" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andada"
            android:text="@string/upcoming_matches"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/Fragment_Profile_UpcomingMatches"
            app:layout_constraintEnd_toEndOf="@id/Fragment_Profile_UpcomingMatches"
            app:layout_constraintStart_toStartOf="@id/Fragment_Profile_UpcomingMatches"
            app:layout_constraintTop_toTopOf="@id/Fragment_Profile_UpcomingMatches" />


        <ImageButton
            android:id="@+id/Fragment_Profile_Logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/transparent"
            android:src="@drawable/join_game_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Fragment_Profile_UpcomingMatches" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andada"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/Fragment_Profile_Logout"
            app:layout_constraintEnd_toEndOf="@id/Fragment_Profile_Logout"
            app:layout_constraintStart_toStartOf="@id/Fragment_Profile_Logout"
            app:layout_constraintTop_toTopOf="@id/Fragment_Profile_Logout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
